--- a/learnyouahaskell.cabal
+++ b/learnyouahaskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 2046d712118f9a79c5a6a8aeafb900cde55dbb787f5b9a75efbeb6ee02f8eb83
+-- hash: 84d9a2a68e3401c9096deecc576e9af59ef21d70ec103b0ed71d1d093b6eb3ae
 
 name:           learnyouahaskell
 version:        0.1.0.0
@@ -27,6 +27,8 @@ source-repository head
 
 library
   exposed-modules:
+      Geometry
+      Geometry.Sphere
       Lib
   other-modules:
       Paths_learnyouahaskell
@@ -34,6 +36,7 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , containers
   default-language: Haskell2010
 
 executable learnyouahaskell-exe
@@ -45,6 +48,7 @@ executable learnyouahaskell-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , learnyouahaskell
   default-language: Haskell2010
 
@@ -58,5 +62,6 @@ test-suite learnyouahaskell-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , containers
     , learnyouahaskell
   default-language: Haskell2010
