--- a/learnyouahaskell.cabal
+++ b/learnyouahaskell.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e30d996d15f02e63087a036d2454a672b6ba1ac2b4325f0f6012dd060c73ff1c
+-- hash: e0517d1d881fe8b47f34c24636af6359c729b33a905821fc7943ca94d75d4875
 
 name:           learnyouahaskell
 version:        0.1.0.0
@@ -27,13 +27,6 @@ source-repository head
 
 library
   exposed-modules:
-      Geometry
-      Geometry.Cube
-      Geometry.Cuboid
-      Geometry.Sphere
-      Lib
-      Tree
-      YesNo
   other-modules:
       Paths_learnyouahaskell
   hs-source-dirs:
@@ -42,20 +35,20 @@ library
       base >=4.7 && <5
     , containers
     , directory
+    , random
   default-language: Haskell2010
 
 executable learnyouahaskell-exe
   main-is: Main.hs
   other-modules:
       Paths_learnyouahaskell
-  hs-source-dirs:
-      app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
     , directory
     , learnyouahaskell
+    , random
   default-language: Haskell2010
 
 test-suite learnyouahaskell-test
@@ -71,4 +64,5 @@ test-suite learnyouahaskell-test
     , containers
     , directory
     , learnyouahaskell
+    , random
   default-language: Haskell2010
